PROJECT(avoidance_visual)
cmake_minimum_required(VERSION 2.8)

SET(CMAKE_CXX_COMPILE "g++")
SET(CMAKE_BUILD_TYPE "Debug")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

IF(WIN32)
    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include )
    LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
ELSE(WIN32)
    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
    LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
ENDIF(WIN32)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/test)

